--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Alfcastaneda's personal website</title>
   <link rel="stylesheet" href="dist/css/styles.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons"  rel="stylesheet">
   <base href="/" />
 </head>
 <body>
