--- a/index.html
+++ b/index.html
@@ -14,31 +14,34 @@
       <md-sidenav
       class="md-sidenav-left"
       md-component-id="left"
-      md-is-locked-open="$mdMedia('gt-md')"
       md-disable-backdrop
       md-whiteframe="4">
-      <md-toolbar class="md-theme-indigo">
-      <h1 class="md-toolbar-tools">{{vm.menuTitle}}</h1>
-      </md-toolbar>
-      <md-content layout-padding>
-      <md-button ng-click="vm.close()" class="md-primary" hide-gt-md>
-      Close Sidenav Left
-      </md-button>
-      <p hide show-gt-md>
-        This sidenav is locked open on your device. To go back to the default behavior,
-        narrow your display.
-      </p>
-      </md-content>
+        <md-toolbar class="md-hue-2">
+          <div class="md-toolbar-tools">
+            <h2>
+              <span>{{'MENU' | translate}}</span>
+            </h2>
+            <span flex></span>
+            <md-button class="md-icon-button" ng-click="vm.close()">
+              <md-icon md-font-set="material-icons">clear</md-icon>
+            </md-button>
+          </div>
+        </md-toolbar>
+
       </md-sidenav>
     </nav>
     <section class="mainContainer">
-      <div class="langBtns">
-        <span translate="TITLE"></span>
-        <md-button class="md-fab md-mini md-primary" ng-click="vm.changeLanguage(lang.shortName)" ng-repeat="lang in vm.languages">
-            {{lang.code}}
+      <div class="menuBtn">
+        <md-button class="md-fab md-mini md-primary"  ng-click="vm.toggleLeft()">
+            <md-icon md-font-set="material-icons">menu</md-icon>
         </md-button>
       </div>
-
+      <div class="langBtns">
+        <span>{{ 'GENERAL.BTNS.LANGUAGES' | translate}} : </span>
+        <md-button class="md-fab md-mini md-primary" ng-click="vm.changeLanguage(lang.shortName)" ng-repeat="lang in vm.languages">
+        {{lang.code}}
+        </md-button>
+      </div>
       <div class="viewContainer" ui-view></div>
     </section>
     </main>
