Added social icons, menu items and translations, added work view and state

--- a/index.html
+++ b/index.html
@@ -5,46 +5,43 @@
     <title>Alfcastaneda's personal website</title>
     <link rel="stylesheet" href="dist/css/styles.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"  rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <base href="/" />
   </head>
   <body>
     <main layout="row" flex ng-controller="indexCtrl as vm">
-    <nav ng-controller="navBarCtrl as vm">
-      <md-sidenav
-      class="md-sidenav-left"
-      md-component-id="left"
-      md-disable-backdrop
-      md-whiteframe="4">
-        <md-toolbar class="md-hue-2">
-          <div class="md-toolbar-tools">
-            <h2>
-              <span>{{'MENU' | translate}}</span>
-            </h2>
-            <span flex></span>
-            <md-button class="md-icon-button" ng-click="vm.close()">
-              <md-icon md-font-set="material-icons">clear</md-icon>
-            </md-button>
-          </div>
-        </md-toolbar>
-
-      </md-sidenav>
-    </nav>
+    <div class="langBtns">
+      <span>{{ 'GENERAL.BTNS.LANGUAGES' | translate}} : </span>
+      {{vm.languagess}}
+      <md-button ng-class="{'md-warn' : vm.checkLang(lang.shortName)}" class="md-fab md-mini md-primary" ng-click="vm.changeLanguage(lang.shortName)" ng-repeat="lang in vm.languages">
+      {{lang.code}}
+      </md-button>
+    </div>
+    <menu-display></menu-display>
     <section class="mainContainer">
-      <div class="menuBtn">
-        <md-button class="md-fab md-mini md-primary"  ng-click="vm.toggleLeft()">
-            <md-icon md-font-set="material-icons">menu</md-icon>
-        </md-button>
-      </div>
-      <div class="langBtns">
-        <span>{{ 'GENERAL.BTNS.LANGUAGES' | translate}} : </span>
-        <md-button class="md-fab md-mini md-primary" ng-click="vm.changeLanguage(lang.shortName)" ng-repeat="lang in vm.languages">
-        {{lang.code}}
-        </md-button>
-      </div>
       <div class="viewContainer" ui-view></div>
     </section>
     </main>
+    <section class="social" hide-xs >
+      <md-button ng-href="http://github.com/hobbit1mx" target="_blank" aria-label="github profile">
+      <md-icon class="github" md-svg-src="dist/img/github.svg"></md-icon>
+      </md-button>
+      <md-button class="twitter" ng-href="http://twitter.com/alf_castaneda" target="_blank" aria-label="twitter profile">
+      <md-icon md-svg-src="dist/img/twitter.svg"></md-icon>
+      </md-button>
+      <md-button class="facebook" ng-href="http://facebook.com/alfcastaneda" target="_blank" aria-label="facebook profile">
+      <md-icon md-svg-src="dist/img/facebook.svg"></md-icon>
+      </md-button>
+      <md-button ng-href="https://linkedin.com/in/alfcastaneda" target="_blank" aria-label="linkedin profile">
+      <md-icon md-svg-src="dist/img/linkedin.svg"></md-icon>
+      </md-button>
+      <md-button ng-href="skype:alfredo1cs" target="_blank" aria-label="skype profile">
+      <md-icon md-svg-src="dist/img/skype.svg"></md-icon>
+      </md-button>
+      <md-button ng-href="http://googleplus.com/alfcastaneda" target="_blank" aria-label="google plus profile">
+      <md-icon md-svg-src="dist/img/gplus.svg"></md-icon>
+      </md-button>
+    </section>
     <script src="dist/js/vendor.js"></script>
     <script src="dist/js/app.min.js"></script>
   </body>
