added last icons colors

--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
       <md-button class="facebook" ng-href="http://facebook.com/alfcastaneda" target="_blank" aria-label="facebook profile">
       <md-icon md-svg-src="dist/img/facebook.svg"></md-icon>
       </md-button>
-      <md-button ng-href="https://linkedin.com/in/alfcastaneda" target="_blank" aria-label="linkedin profile">
+      <md-button class="linkedin" ng-href="https://linkedin.com/in/alfcastaneda" target="_blank" aria-label="linkedin profile">
       <md-icon md-svg-src="dist/img/linkedin.svg"></md-icon>
       </md-button>
-      <md-button ng-href="skype:alfredo1cs" target="_blank" aria-label="skype profile">
+      <!--<md-button class="skype"  target="_blank" aria-label="skype profile">
       <md-icon md-svg-src="dist/img/skype.svg"></md-icon>
-      </md-button>
-      <md-button ng-href="http://googleplus.com/alfcastaneda" target="_blank" aria-label="google plus profile">
+      </md-button>-->
+      <md-button class="gplus" ng-href="https://plus.google.com/114661432387687694369/posts" target="_blank" aria-label="google plus profile">
       <md-icon md-svg-src="dist/img/gplus.svg"></md-icon>
       </md-button>
     </section>
